Install org-plus-contrib

--- a/distribution.org
+++ b/distribution.org
@@ -44,3 +44,14 @@
    #+BEGIN_SRC emacs-lisp :tangle init.el
      (straight-use-package 'evil)
    #+END_SRC
+** TODO Org-Mode
+   References:
+   - https://orgmode.org/
+   - https://github.com/emacsmirror/org
+   - https://github.com/raxod502/straight.el/issues/211#issuecomment-355379837
+   #+BEGIN_SRC emacs-lisp :tangle init.el
+     ;; (straight-use-package 'org)
+     (straight-override-recipe
+      '(org :type git :host github :repo "emacsmirror/org" :no-build t))
+     (straight-use-package 'org-plus-contrib)
+   #+END_SRC
