--- a/distribution.org
+++ b/distribution.org
@@ -17,9 +17,11 @@
     - https://github.com/jwiegley/use-package
 * Bootstrap
 ** Emacs Home Directory
+   References:
+   - https://emacs.stackexchange.com/questions/4253/how-to-start-emacs-with-a-custom-user-emacs-directory
    #+BEGIN_SRC emacs-lisp :tangle init.el
-     (setq user-init-file (or load-file-name (buffer-file-name)))
-     (setq user-emacs-directory (file-name-directory user-init-file))
+     (setq user-init-file (or load-file-name (buffer-file-name))
+           user-emacs-directory (file-name-directory user-init-file))
    #+END_SRC
 ** Straight.el
    #+BEGIN_SRC emacs-lisp :tangle init.el
