--- a/distribution.org
+++ b/distribution.org
@@ -104,3 +104,10 @@
       '(org :type git :host github :repo "emacsmirror/org" :no-build t))
      (straight-use-package 'org-plus-contrib)
    #+END_SRC
+** TODO Unpackaged
+   References:
+   - https://github.com/alphapapa/unpackaged.el
+   #+BEGIN_SRC emacs-lisp :tangle init.el
+     (straight-use-package
+       '(unpackaged :type git :host github :repo "alphapapa/unpackaged.el"))
+   #+END_SRC
