--- a/distribution.org
+++ b/distribution.org
@@ -96,6 +96,13 @@
      (straight-use-package 'evil)
      (evil-mode 1)
    #+END_SRC
+** TODO Which-key
+   References:
+   - https://github.com/justbur/emacs-which-key
+   #+BEGIN_SRC emacs-lisp :tangle init.el
+     (straight-use-package 'which-key)
+     (which-key-mode 1)
+   #+END_SRC
 ** TODO Magit
    References:
    - https://github.com/magit/magit
