--- a/distribution.org
+++ b/distribution.org
@@ -261,6 +261,23 @@
                  (avy-setup-default)
                  (global-set-key (kbd "C-c C-j") 'avy-resume)))
    #+END_SRC
+* Appearance
+  :PROPERTIES:
+  :header-args: :tangle init.el
+  :END:
+** TODO Doom Theme
+   [2018-12-30 Sun 15:22]
+   References:
+   - https://github.com/hlissner/emacs-doom-themes
+   #+BEGIN_SRC emacs-lisp
+     (use-package doom-themes
+       :init (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+                   doom-themes-enable-italic t) ; if nil, italics is universally disabled
+       :config (progn
+                 (load-theme 'doom-tomorrow-night t)
+                 (doom-themes-visual-bell-config)
+                 (with-eval-after-load 'org (doom-themes-org-config))))
+   #+END_SRC
 * Cleanup
   :PROPERTIES:
   :header-args: :tangle init.el
