--- a/distribution.org
+++ b/distribution.org
@@ -225,7 +225,7 @@
    - https://github.com/tarsius/git-elisp-overview
    #+BEGIN_SRC emacs-lisp
      (use-package magit
-       :defer t)
+       :commands 'magit-status)
      (use-package evil-magit
        :after magit)
      (use-package magit-todos
