Add hydra shortcut for unpackaged/magit-status

--- a/distribution.org
+++ b/distribution.org
@@ -184,6 +184,7 @@
                    "distribution"
                    ("c" org-capture "capture")
                    ("e" my/edit-config "edit config")
+                   ("g" unpackaged/magit-status "magit status")
                    ("r" my/reload-config "reload config")
                    ("u" use-package-report "use-package report"))
                  (defhydra hydra-straight-helper (:hint nil)
