Install rust-mode

--- a/distribution.org
+++ b/distribution.org
@@ -404,6 +404,16 @@
      (use-package alchemist
        :after 'elixir-mode)
    #+END_SRC
+** TODO Rust
+*** TODO rust-mode
+   [2019-01-02 Wed 14:40]
+   References:
+   - https://github.com/rust-lang/rust-mode
+   - https://github.com/jwiegley/use-package#modes-and-interpreters
+   #+BEGIN_SRC emacs-lisp
+     (use-package rust-mode
+       :config (setq rust-format-on-save t))
+   #+END_SRC
 * Appearance
   :PROPERTIES:
   :header-args: :tangle init.el
