--- a/distribution.org
+++ b/distribution.org
@@ -449,6 +449,17 @@
        :defer t
        :mode "/\\(Cargo.lock\\|\\.cargo/config\\)\\'")
    #+END_SRC
+** Web Technologies
+*** TODO web-mode
+   [2019-01-02 Wed 14:38]
+   References:
+   - http://web-mode.org/
+   - https://github.com/fxbois/web-mode
+   #+BEGIN_SRC emacs-lisp
+     (use-package web-mode
+       :defer t
+       :commands 'web-mode)
+   #+END_SRC
 * Appearance
   :PROPERTIES:
   :header-args: :tangle init.el
