--- a/distribution.org
+++ b/distribution.org
@@ -531,7 +531,7 @@
    [2018-12-30 Sun 15:22]
    References:
    - https://github.com/hlissner/emacs-doom-themes
-   #+BEGIN_SRC emacs-lisp
+   #+BEGIN_SRC emacs-lisp :tangle no
      (use-package doom-themes
        :init (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
                    doom-themes-enable-italic t) ; if nil, italics is universally disabled
